# CGLearn

./: README.md
Code/: Controller_Extrude_Polygon.cpp  Controller_Extrude_Polygon.h  GPT.md  GeoDataUtil.cpp  GeoDataUtil.h
Test/: Hello.cpp  main.cpp
docs/: DS-API.txt  GPT.md  代码解析.md  挤出删除临界面.md  排查问题.md  数据结构.md  梳理.xmind  输出.txt
docs/geodata/: GeoData - 副本.cpp  GeoData - 副本.h  GeoData.cpp  GeoData.h
docs/geodata/to/: Controller_Common_Operate.h  Controller_Create_Circle.h  Controller_Create_StraightLine.h  Controller_Edit.h  Controller_Extrude_Curve.h  Controller_Extrude_Path.h  Controller_Extrude_Polygon.h  Group.h  (+12 more)
sketch0218/: .clang-format  .clang-tidy  .editorconfig  .gitignore  rustfmt.toml  stylua.toml  xmake.lua
sketch0218/loong/: .editorconfig  sketch.sln  xmake.lua
sketch0218/package/: xmake.lua
sketch0218/script/: download-config-dir.lua  download-psh-blob-file.lua
sketch0218/sketch-app/: .eslintrc.json  .gitignore  README.md  bun.lockb  image_viewer.html  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  xmake.lua
sketch0218/sketch-app/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
sketch0218/sketch-app/src-tauri/capabilities/: main.json
sketch0218/sketch-app/src-tauri/icons/: icon.icns
sketch0218/sketch-app/src-tauri/src/: main.rs
sketch0218/sketch-app/src-tauri/src/commands/: commands.rs  image_viewer.rs  mod.rs  viewport.rs
sketch0218/sketch-app/src-tauri/src/ffi/: core.rs  view.rs
sketch0218/sketch-render/: xmake.lua
sketch0218/sketch-rs/: xmake.lua
sketch0218/sketch-view-app/: xmake.lua
(+1095 files in other folders)
